Clean up unused image assets and update image references
- Deleted several unused .mov, .jpg, and .png files from public/fotos and public/Projektbilder subdirectories.
- Cleared avatarUrl and heroImage paths in profileData.ts due to missing source files.
- Configured Git LFS to track large images in public/Projektbilder/ki/.
- Identified a missing image (6.png) for the KI project, to be addressed later.
- Noted case sensitivity issue for 'Saskia' project images for future review.

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ public/fotos/ki[[:space:]]bulder[[:space:]]3[[:space:]]semster[[:space:]]/Angel[
 public/fotos/ki[[:space:]]bulder[[:space:]]3[[:space:]]semster[[:space:]]/Schwein[[:space:]]Kopie.png filter=lfs diff=lfs merge=lfs -text
 public/fotos/ki[[:space:]]bulder[[:space:]]3[[:space:]]semster[[:space:]]/Goldfischglas[[:space:]]Kopie.png filter=lfs diff=lfs merge=lfs -text
 public/fotos/roomies[[:space:]]Kopie3[[:space:]]Semster[[:space:]]Ui:ux/roomies-3.mov filter=lfs diff=lfs merge=lfs -text
+public/Projektbilder/ki/*.png filter=lfs diff=lfs merge=lfs -text
